apps/gitops-demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo-ingress
  namespace: gitops-demo
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-demo-svc
                port:
                  number: 80
